--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form action="login" method="POST">
-    用户名：<input type="text" name="username"><br/>
+    用户名：<input type="text" name="id"><br/>
     密&nbsp;&nbsp;&nbsp;码：<input type="password" name="password"/><br/>
     <br/>
     <input type="submit" value="登录"/>
